// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterContext should apply a hook for useNavigate: navigation push 1`] = `
[
  [
    {},
    "",
    "/subscriptions/rhel?lorem=ipsum",
    undefined,
  ],
  [
    {},
    "",
    "/subscriptions/rhel?lorem=ipsum",
    undefined,
  ],
  [
    {},
    "",
    "/subscriptions/rhel?lorem=ipsum",
    undefined,
  ],
]
`;

exports[`RouterContext should apply a hook for useRouteDetail: document title 1`] = `
[
  [
    "t(curiosity-view.title, {"appName":"Subscriptions","context":"rhel"}) - Subscriptions",
    true,
  ],
]
`;

exports[`RouterContext should apply a hook for useSetRouteProduct: route details, closest 1`] = `
{
  "detailProps": [
    "allConfigs",
    "availableVariants",
    "firstMatch",
    "isClosest",
    "productGroup",
    "productConfig",
    "productPath",
    "productVariant",
    "disableIsClosestMatch",
  ],
  "firstMatch": [
    "aliases",
    "productGroup",
    "productId",
    "productLabel",
    "productPath",
    "productDisplay",
    "viewId",
    "productVariants",
    "query",
    "graphTallyQuery",
    "inventoryGuestsQuery",
    "inventoryHostsQuery",
    "inventorySubscriptionsQuery",
    "initialGraphFilters",
    "initialGraphSettings",
    "initialGuestsFilters",
    "initialInventoryFilters",
    "initialInventorySettings",
    "initialSubscriptionsInventoryFilters",
    "initialToolbarFilters",
  ],
  "isClosest": true,
  "productGroup": "rhel",
  "productPath": "l",
}
`;

exports[`RouterContext should apply a hook for useSetRouteProduct: route details, match 1`] = `
{
  "detailProps": [
    "allConfigs",
    "availableVariants",
    "firstMatch",
    "isClosest",
    "productGroup",
    "productConfig",
    "productPath",
    "productVariant",
    "disableIsClosestMatch",
  ],
  "firstMatch": [
    "aliases",
    "productGroup",
    "productId",
    "productLabel",
    "productPath",
    "productDisplay",
    "viewId",
    "productVariants",
    "query",
    "graphTallyQuery",
    "inventoryGuestsQuery",
    "inventoryHostsQuery",
    "inventorySubscriptionsQuery",
    "initialGraphFilters",
    "initialGraphSettings",
    "initialGuestsFilters",
    "initialInventoryFilters",
    "initialInventorySettings",
    "initialSubscriptionsInventoryFilters",
    "initialToolbarFilters",
  ],
  "isClosest": false,
  "productGroup": "rhel",
  "productPath": "rhel",
}
`;

exports[`RouterContext should return specific properties: specific properties 1`] = `
{
  "useNavigate": [Function],
  "useRouteDetail": [Function],
  "useSetRouteProduct": [Function],
}
`;
